--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,20 @@
 @import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
 
+.cover-loading {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #fff !important;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 [data-bs-theme="dark"] {
   --bs-heading-color: rgba(255, 255, 255, 0.85);
   --bs-body-color: rgba(255, 255, 255, 0.6) !important;
