--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -67,10 +67,12 @@
 .gi-main-menu ul li .mega-menu li .mega-block li a:hover {
   color: #f44336;
 }
-.gi-main-menu ul li.dropdown ul li a:hover, .gi-main-menu ul li.dropdown ul li a .active {
+.gi-main-menu ul li.dropdown ul li a:hover,
+.gi-main-menu ul li.dropdown ul li a .active {
   color: #f44336;
 }
-.gi-main-menu ul li.dropdown ul li a:hover i, .gi-main-menu ul li.dropdown ul li a .active i {
+.gi-main-menu ul li.dropdown ul li a:hover i,
+.gi-main-menu ul li.dropdown ul li a .active i {
   color: #f44336;
 }
 .gi-main-menu ul li.dropdown ul li:hover > a {
@@ -95,7 +97,13 @@
   color: #f44336;
 }
 
-.gi-hero .gi-main-content .gi-slider-content .gi-main-slider .gi-slider .gi-slide-content p {
+.gi-hero
+  .gi-main-content
+  .gi-slider-content
+  .gi-main-slider
+  .gi-slider
+  .gi-slide-content
+  p {
   color: #f44336;
 }
 
@@ -103,10 +111,12 @@
   background-color: #f44336;
 }
 
-.gi-category .gi-category-block .gi-cat-box .gi-cat-icon i, .gi-category .gi-category-block-2 .gi-cat-box .gi-cat-icon i {
+.gi-category .gi-category-block .gi-cat-box .gi-cat-icon i,
+.gi-category .gi-category-block-2 .gi-cat-box .gi-cat-icon i {
   color: #f44336;
 }
-.gi-category .gi-category-block .gi-cat-box .gi-cat-icon .gi-lbl, .gi-category .gi-category-block-2 .gi-cat-box .gi-cat-icon .gi-lbl {
+.gi-category .gi-category-block .gi-cat-box .gi-cat-icon .gi-lbl,
+.gi-category .gi-category-block-2 .gi-cat-box .gi-cat-icon .gi-lbl {
   background: #f44336;
 }
 
@@ -121,7 +131,14 @@
   background-color: #f44336;
 }
 
-.gi-pro-variation .gi-pro-variation-inner.gi-pro-variation-size .gi-pro-variation-content li.active, .gi-pro-variation .gi-pro-variation-inner.gi-pro-variation-size .gi-pro-variation-content li:hover {
+.gi-pro-variation
+  .gi-pro-variation-inner.gi-pro-variation-size
+  .gi-pro-variation-content
+  li.active,
+.gi-pro-variation
+  .gi-pro-variation-inner.gi-pro-variation-size
+  .gi-pro-variation-content
+  li:hover {
   background-color: #f44336 !important;
   border-color: #f44336 !important;
   color: #fff;
@@ -131,7 +148,8 @@
   color: #f44336;
 }
 
-.gi-pro-tab-nav .nav-item .nav-link.active, .gi-pro-tab-nav .nav-item .nav-link:hover {
+.gi-pro-tab-nav .nav-item .nav-link.active,
+.gi-pro-tab-nav .nav-item .nav-link:hover {
   color: #f44336;
 }
 
@@ -154,20 +172,28 @@
   color: #f44336;
 }
 
-.gi-blog .blog-info .detail .more-info a:hover, .gi-blog-section .blog-info .detail .more-info a:hover {
+.gi-blog .blog-info .detail .more-info a:hover,
+.gi-blog-section .blog-info .detail .more-info a:hover {
   color: #f44336;
 }
-.gi-blog .blog-info .detail .more-info a:hover i, .gi-blog-section .blog-info .detail .more-info a:hover i {
+.gi-blog .blog-info .detail .more-info a:hover i,
+.gi-blog-section .blog-info .detail .more-info a:hover i {
   color: #f44336;
 }
-.gi-blog .blog-info .detail label a:hover, .gi-blog-section .blog-info .detail label a:hover {
+.gi-blog .blog-info .detail label a:hover,
+.gi-blog-section .blog-info .detail label a:hover {
   color: #f44336 !important;
 }
 
 .gi-footer .footer-top .gi-footer-widget .gi-footer-links .gi-footer-link {
   color: #f44336;
 }
-.gi-footer .footer-top .gi-footer-widget .gi-footer-links .gi-footer-link a:hover {
+.gi-footer
+  .footer-top
+  .gi-footer-widget
+  .gi-footer-links
+  .gi-footer-link
+  a:hover {
   color: #f44336;
 }
 
@@ -216,11 +242,19 @@
   background-color: #f44336;
 }
 
-.gi-blog-comments .gi-single-comment-wrapper .gi-blog-comment-content .gi-blog-details-btn a {
+.gi-blog-comments
+  .gi-single-comment-wrapper
+  .gi-blog-comment-content
+  .gi-blog-details-btn
+  a {
   color: #f44336;
 }
 
-.gi-blogs-sidebar .gi-sidebar-block .gi-sidebar-block-item .gi-sidebar-block-detial a {
+.gi-blogs-sidebar
+  .gi-sidebar-block
+  .gi-sidebar-block-item
+  .gi-sidebar-block-detial
+  a {
   color: #f44336;
 }
 .gi-blogs-sidebar .gi-sidebar-block .gi-sidebar-block-item .checked:after {
@@ -236,21 +270,26 @@
   color: #f44336;
 }
 
-.gi-checkout-section [type=radio]:checked + label:before {
+.gi-checkout-section [type="radio"]:checked + label:before {
   border: 1px solid #f44336;
 }
-.gi-checkout-section [type=radio]:checked + label:after {
+.gi-checkout-section [type="radio"]:checked + label:after {
   background: #f44336;
 }
 
-.gi-wish-notify a, .gi-compare-notify a, .gi-cart-notify a {
+.gi-wish-notify a,
+.gi-compare-notify a,
+.gi-cart-notify a {
   color: #f44336;
 }
-.gi-wish-notify p, .gi-compare-notify p, .gi-cart-notify p {
+.gi-wish-notify p,
+.gi-compare-notify p,
+.gi-cart-notify p {
   border-bottom: 5px solid #f44336;
 }
 
-.gi-product-inner .gi-pro-image .gi-pro-actions .wishlist.active, .gi-product-inner .gi-pro-image .gi-pro-actions .compare.active {
+.gi-product-inner .gi-pro-image .gi-pro-actions .wishlist.active,
+.gi-product-inner .gi-pro-image .gi-pro-actions .compare.active {
   background-color: #f44336;
 }
 
@@ -258,14 +297,26 @@
   color: #f44336;
 }
 
-.gi-login-wrapper .gi-login-container .gi-login-form .gi-login-btn span a:hover {
+.gi-login-wrapper
+  .gi-login-container
+  .gi-login-form
+  .gi-login-btn
+  span
+  a:hover {
   color: #f44336;
 }
 
-.gi-single-product .single-pro-content .gi-single-price .final-price .price-des {
+.gi-single-product
+  .single-pro-content
+  .gi-single-price
+  .final-price
+  .price-des {
   color: #f44336;
 }
-.gi-single-product .single-pro-content .gi-single-price-stoke .gi-single-ps-title {
+.gi-single-product
+  .single-pro-content
+  .gi-single-price-stoke
+  .gi-single-ps-title {
   color: #f44336;
 }
 
@@ -277,11 +328,15 @@
 .gi-single-product .single-nav-thumb .slick-slide:hover img {
   border-color: #f44336;
 }
-.gi-single-product .single-nav-thumb .slick-slide.slick-current.slick-active img {
+.gi-single-product
+  .single-nav-thumb
+  .slick-slide.slick-current.slick-active
+  img {
   border-color: #f44336;
 }
 
-.gi-shop-sidebar .gi-sidebar-block .gi-sidebar-block-item .checked:after, .gi-shop-sidebar-2 .gi-sidebar-block .gi-sidebar-block-item .checked:after {
+.gi-shop-sidebar .gi-sidebar-block .gi-sidebar-block-item .checked:after,
+.gi-shop-sidebar-2 .gi-sidebar-block .gi-sidebar-block-item .checked:after {
   border: 1px solid #f44336;
   background: #f44336;
 }
@@ -302,7 +357,12 @@
   border: 1px solid #f44336;
 }
 
-.gi-register-wrapper .gi-register-container .gi-register-form .gi-register-btn span a:hover {
+.gi-register-wrapper
+  .gi-register-container
+  .gi-register-form
+  .gi-register-btn
+  span
+  a:hover {
   color: #f44336;
 }
 
@@ -324,5 +384,70 @@
 }
 .gi-track .gi-steps-header .progress .progress-bar {
   background-color: #f44336;
+}
+
+.hover-pedido {
+  position: relative;
+  display: inline-block;
+  margin-top: 5px;
+}
+
+.hover-pedido .tooltip-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 30%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.hover-pedido:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+.hover-pedido .tooltip-text::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #555 transparent;
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  14% {
+    transform: scale(1.3);
+  }
+  28% {
+    transform: scale(1);
+  }
+  42% {
+    transform: scale(1.3);
+  }
+  70% {
+    transform: scale(1);
+  }
+}
+
+.btn-heartbeat {
+  animation: heartbeat 1.5s infinite;
+}
+
+.btn-heartbeat:hover {
+  animation-play-state: paused;
 }
 /*# sourceMappingURL=color-6.css.map */
